--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
     "name": "csgt/ui",
     "description": "CSGT Laravel UI utilities and presets.",
-    "keywords": [
-        "laravel",
-        "ui"
-    ],
+    "keywords": ["laravel", "ui"],
     "license": "MIT",
     "authors": [
         {
@@ -14,10 +11,10 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/console": "^8.42|^9.0|^10.0",
-        "illuminate/filesystem": "^8.42|^9.0|^10.0",
-        "illuminate/support": "^8.82|^9.0|^10.0",
-        "illuminate/validation": "^8.42|^9.0|^10.0"
+        "illuminate/console": "^8.42|^9.0",
+        "illuminate/filesystem": "^8.42|^9.0",
+        "illuminate/support": "^8.82|^9.0",
+        "illuminate/validation": "^8.42|^9.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.23|^7.0"
