--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "csgt/ui",
     "description": "CSGT Laravel UI utilities and presets.",
-    "keywords": ["laravel", "ui"],
+    "keywords": [
+        "laravel",
+        "ui"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -10,11 +13,11 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/console": "^8.42|^9.0",
-        "illuminate/filesystem": "^8.42|^9.0",
-        "illuminate/support": "^8.82|^9.0",
-        "illuminate/validation": "^8.42|^9.0"
+        "php": "^8.1",
+        "illuminate/console": "^10.0",
+        "illuminate/filesystem": "^10.0",
+        "illuminate/support": "^10.0",
+        "illuminate/validation": "^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.23|^7.0"
